hphp/hack/test/typecheck/unset_shape_idx.php.exp
File "unset_shape_idx.php", line 7, characters 3-19:
In strict mode, unset is banned except on array indexing (Typing[4135])
File "unset_shape_idx.php", line 4, characters 12-12:
This is a shape
